LinKreta_POC_Repository/force-app/main/default/objects/GM_REVE_UNTS__x/GM_REVE_UNTS__x.object-meta.xml
<CustomObject>
    <description>GM_REVE_UNTS</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>GM_REVE_UNTS</externalName>
    <label>GM_REVE_UNTS</label>
    <pluralLabel>GM_REVE_UNTS</pluralLabel>
</CustomObject>