LinKreta_POC_Repository/force-app/main/default/objects/GM_REVE_UNTS__x/fields/BOL_ID__c.field-meta.xml
<CustomField>
    <fullName>BOL_ID__c</fullName>
    <description>BOL_ID</description>
    <externalDeveloperName>BOL_ID</externalDeveloperName>
    <label>BOL_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>