LinKreta_POC_Repository/force-app/main/default/objects/GM_REVE_UNTS__x/fields/IS_ACTIVE__c.field-meta.xml
<CustomField>
    <fullName>IS_ACTIVE__c</fullName>
    <description>IS_ACTIVE</description>
    <externalDeveloperName>IS_ACTIVE</externalDeveloperName>
    <label>IS_ACTIVE</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>