LinKreta_POC_Repository/force-app/main/default/objects/GM_REVE_UNTS__x/fields/IS_NONCHARG__c.field-meta.xml
<CustomField>
    <fullName>IS_NONCHARG__c</fullName>
    <description>IS_NONCHARG</description>
    <externalDeveloperName>IS_NONCHARG</externalDeveloperName>
    <label>IS_NONCHARG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>