LinKreta_POC_Repository/force-app/main/default/objects/GM_REVE_UNTS__x/fields/REVE_DESC__c.field-meta.xml
<CustomField>
    <fullName>REVE_DESC__c</fullName>
    <description>REVE_DESC</description>
    <externalDeveloperName>REVE_DESC</externalDeveloperName>
    <label>REVE_DESC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>