LinKreta_POC_Repository/force-app/main/default/objects/GM_REVE_UNTS__x/fields/REVE_ID__c.field-meta.xml
<CustomField>
    <fullName>REVE_ID__c</fullName>
    <description>REVE_ID</description>
    <externalDeveloperName>REVE_ID</externalDeveloperName>
    <label>REVE_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>