LinKreta_POC_Repository/force-app/main/default/objects/GM_REVE_UNTS__x/fields/REVE_MID__c.field-meta.xml
<CustomField>
    <fullName>REVE_MID__c</fullName>
    <description>REVE_MID</description>
    <externalDeveloperName>REVE_MID</externalDeveloperName>
    <label>REVE_MID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>