LinKreta_POC_Repository/force-app/main/default/objects/GM_REVE_UNTS__x/fields/SER_LINE_ID__c.field-meta.xml
<CustomField>
    <fullName>SER_LINE_ID__c</fullName>
    <description>SER_LINE_ID</description>
    <externalDeveloperName>SER_LINE_ID</externalDeveloperName>
    <label>SER_LINE_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>